[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "smsllt"
version = "1.0.0"
description = "Python SDK for smsllt.com SMS verification API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "smsllt-sdk contributors"},
]
keywords = ["smsllt", "sms", "verification", "api", "virtual-number"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Telephony",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.25",
    "urllib3>=1.26",
]

[project.urls]
Homepage = "https://smsllt.com"
Repository = "https://github.com/nous-research/smsllt-python"
Documentation = "https://github.com/nous-research/smsllt-python#readme"

[tool.setuptools]
packages = ["smsllt"]