[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "smsllt"
version = "1.0.0"
description = "Python SDK for smsllt.com — Global SMS verification platform with 200K+ virtual phone numbers across 12+ countries. Receive SMS online for Discord, Telegram, ChatGPT, WhatsApp & more. USDT payment supported."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "smsllt-sdk contributors"},
]
keywords = ["smsllt", "sms-verification", "virtual-phone-number", "temporary-number", "receive-sms-online", "sms-api", "python-sdk", "virtual-numbers", "phone-verification", "otp", "sms-code", "discord-sms", "telegram-virtual-number", "chatgpt-verification", "usdt-payment", "sms-activation", "接码平台", "虚拟号码"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Telephony",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.25",
    "urllib3>=1.26",
]

[project.urls]
Homepage = "https://smsllt.com"
Repository = "https://github.com/pv8cf5cf7t-blip/smsllt-python"
Documentation = "https://github.com/pv8cf5cf7t-blip/smsllt-python#readme"

[tool.setuptools]
packages = ["smsllt"]